# sycamore

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
assets/: atmosphere.glsl  flat-frag.glsl  flat-vert.glsl  flat.glsl
examples/HelloCube/: Main.cpp
include/: Core.h  Sycamore.h
include/Engine/: Application.h  Assets.h  Camera.h  Event.h  GameComponent.h  GameObject.h  Input.h  Notify.h  Renderable.h  Scene.h  Stopwatch.h  Transform.h  World.h
include/Graphics/: Geometry.h  Material.h  MeshComponent.h  Renderer.h  Shader.h  Texture.h  Vertex.h
lib/: assimp-vc143-mtd.lib
src/: Main.cpp
src/Engine/: Application.cpp  Camera.cpp  GameComponent.cpp  GameObject.cpp  Input.cpp  Notify.cpp  Renderable.cpp  Scene.cpp  Stopwatch.cpp  Transform.cpp  World.cpp
src/Graphics/: Geometry.cpp  Material.cpp  MeshComponent.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Vertex.cpp
